Feature: use expression to match specific headers in multiHTTP
In order to be able to match specific headers in multiHTTP checks, we
use the existing `expression` field to specify the header name to match.
Other than this, everything works as before. There's a fallback in
place, so that in case we have a check _without_ an expression, it uses
the old behavior.

Signed-off-by: Marcelo E. Magallon <marcelo.magallon@grafana.com>

--- a/internal/prober/multihttp/script.tmpl
+++ b/internal/prober/multihttp/script.tmpl
@@ -48,6 +48,23 @@ export const options = {
 	discardResponseBodies: false, // enable only if there are checks?
 };
 
+function assertHeader(headers, name, matcher) {
+	const lcName = name.toLowerCase();
+	const values = Object.entries(headers).
+		filter(h => h[0].toLowerCase() === lcName).
+		map(h => h[1]);
+
+	if (values.find(v => matcher(v)) !== undefined) {
+		return true;
+	} else if (values.length === 0) {
+		console.warn(`'${name}' not present in response`);
+	} else {
+		values.forEach(v => console.warn(`'${name}' has the value '${v}'`));
+	}
+
+	return false;
+}
+
 export default function() {
 	let response;
 	const vars = {};
