make response logging a global option

--- a/internal/prober/multihttp/script.tmpl
+++ b/internal/prober/multihttp/script.tmpl
@@ -72,10 +72,11 @@ export default function() {
 	let url;
 	let currentCheck;
 	let match;
+	const logResponse = {{ .LogResponses }}
 	const vars = {};
 
  {{ range .Entries }}
-	console.log("Starting request to {{.Request.Url}}...");
+	console.log("Starting request to {{ .Request.Url }}...");
 	try {
 		url = new URL({{ buildUrl .Request.Url }});
 	} catch(e) {
@@ -93,10 +94,10 @@ export default function() {
 		redirects: 0{{ if gt (len $headers) 0 }},
 		headers: {{ $headers }}{{ end }}
 	});
-	console.log("Response received from {{.Request.Url}}, status", response.status);
-	if(.LogResponse) {
+	console.log("Response received from {{ .Request.Url }}, status", response.status);
+	if(logResponse) {
 		const body = response.body || ''
-		console.log("Response body received from {{.Request.Url}}:", body.slice(0, 1000));
+		console.log("Response body received from {{ .Request.Url }}:", body.slice(0, 1000));
 	}
 	if(response.error) {
 		console.error("Request error:" + url.toString() + ": " + response.error)
