Add an option to log multihttp responses (#550)
* add the option to include response bodies in the log output

* add response body log to template

* make response logging a global option

* include LogResponseBodies in script test

* regenerate again

--- a/internal/prober/multihttp/script.tmpl
+++ b/internal/prober/multihttp/script.tmpl
@@ -72,6 +72,7 @@ export default function() {
 	let url;
 	let currentCheck;
 	let match;
+	const logResponse = {{ .LogResponses }}
 	const vars = {};
 
  {{ range $idx, $entry := .Entries }}
@@ -97,7 +98,11 @@ export default function() {
 		redirects: 0{{ if gt (len $headers) 0 }},
 		headers: {{ $headers }}{{ end }}
 	});
-	console.log("Response received from {{.Request.Url}}, status", response.status);
+	console.log("Response received from {{ .Request.Url }}, status", response.status);
+	if(logResponse) {
+		const body = response.body || ''
+		console.log("Response body received from {{ .Request.Url }}:", body.slice(0, 1000));
+	}
 	if(response.error) {
 		console.error("Request error:" + url.toString() + ": " + response.error)
 	}
